fix: enhances exit map mode button visibility

--- a/src/features/projectsV2/ProjectsMap/ProjectsMap.module.scss
+++ b/src/features/projectsV2/ProjectsMap/ProjectsMap.module.scss
@@ -18,6 +18,12 @@
 
   > .exitMapModeButton {
     z-index: 2;
+    background: $light;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    padding: 6px;
   }
 }
 
